--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@ p{margin-top: 0px;margin-bottom: var(--wp--custom--spacing--blockbottom);}</styl
 <div class="wp-block-columns alignwide is-layout-flex wp-container-85">
 <div class="wp-block-column fr-animate fr-move-up is-layout-flow">
 <div class="wp-block-group is-layout-flow wp-container-77">
-<p class="has-text-align-center has-max-huge-font-size" style="font-style:normal;font-weight:700">22, 239</p>
+<p class="has-text-align-center has-max-huge-font-size" style="font-style:normal;font-weight:700"></p>
 
 
 
@@ -568,7 +568,7 @@ p{margin-top: 0px;margin-bottom: var(--wp--custom--spacing--blockbottom);}</styl
 
 <div class="wp-block-column fr-animate fr-move-up fr-delay-3 is-layout-flow">
 <div class="wp-block-group is-layout-flow wp-container-79">
-<p class="has-text-align-center has-max-huge-font-size" style="font-style:normal;font-weight:700">18, 129</p>
+<p class="has-text-align-center has-max-huge-font-size" style="font-style:normal;font-weight:700"></p>
 
 
 
@@ -580,7 +580,7 @@ p{margin-top: 0px;margin-bottom: var(--wp--custom--spacing--blockbottom);}</styl
 
 <div class="wp-block-column fr-animate fr-move-up fr-delay-5 is-layout-flow">
 <div class="wp-block-group is-layout-flow wp-container-81">
-<p class="has-text-align-center has-max-huge-font-size" style="font-style:normal;font-weight:700">11,573</p>
+<p class="has-text-align-center has-max-huge-font-size" style="font-style:normal;font-weight:700"></p>
 
 
 
@@ -592,7 +592,7 @@ p{margin-top: 0px;margin-bottom: var(--wp--custom--spacing--blockbottom);}</styl
 
 <div class="wp-block-column fr-animate fr-move-up fr-delay-7 is-layout-flow">
 <div class="wp-block-group is-layout-flow wp-container-83">
-<p class="has-text-align-center is-style-default has-max-huge-font-size" style="font-style:normal;font-weight:700">1,239</p>
+<p class="has-text-align-center is-style-default has-max-huge-font-size" style="font-style:normal;font-weight:700"></p>
 
 
 
