--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ p{margin-top: 0px;margin-bottom: var(--wp--custom--spacing--blockbottom);}</styl
 					<div class="wp-block-navigation__responsive-dialog" aria-label="Menu">
 							<button aria-label="Close menu" data-micromodal-close class="wp-block-navigation__responsive-container-close"><svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 24 24" width="24" height="24" aria-hidden="true" focusable="false"><path d="M13 11.8l6.1-6.3-1-1-6.1 6.2-6.1-6.2-1 1 6.1 6.3-6.5 6.7 1 1 6.5-6.6 6.5 6.6 1-1z"></path></svg></button>
 						<div class="wp-block-navigation__responsive-container-content" id="modal-1-content">
-							<ul class="wp-block-navigation__container"><li class=" wp-block-navigation-item wp-block-navigation-link"><a class="wp-block-navigation-item__content" href="/sample-page/"><span class="wp-block-navigation-item__label">Password Generator</span></a></li></ul>
+							<ul class="wp-block-navigation__container"><li class=" wp-block-navigation-item wp-block-navigation-link"><a class="wp-block-navigation-item__content" href="/password-generator/"><span class="wp-block-navigation-item__label">Password Generator</span></a></li></ul>
 						</div>
 					</div>
 				</div>
